# astrea

./: .gitignore  README.md  astrea.py  configs.py  evolvers.py  flux_limiters.py  functions.py  game_of_life.py  limiters.py  mhydys.py  plotting_functions.py  pyproject.toml  reconstruct.py  requirements.txt  settings.py  settings.yml  setup.py  setupEnv.py  simulate.py  simulation.py  slope_limiters.py  solvers.py  tests.py  timestepper.py
.github/workflows/: greetings.yml  labeler.yml  pylint.yml  python-package.yml  simulation-status.yml
functions/: .default.py  analytic.py  constructor.py  constructors.py  fv.py  generic.py  plotting.py  shockTube.py
num_methods/: evolvers.py  limiters.py  mag_field.py  magnetic.py  magnetic_field.py  solvers.py
numerics/: evolvers.py  limiters.py  pcm.py  plm.py  ppm.py  reconstruct.py  solvers.py
schemes/: pcm.py  plm.py  ppm.py  weno.py
static/: .db.json  .default.py  .default.yml  .env  requirements.txt  setup.py  tests.py
